error.txt
   Compiling fhn v0.1.0 (/home/antoine/Documents/fhn)
error[E0425]: cannot find value `PURPLE` in this scope
   --> src/simulations/forward.rs:168:65
    |
168 |         &RED, &BLUE, &GREEN, &MAGENTA, &CYAN, &BLACK, &YELLOW, &PURPLE,
    |                                                                 ^^^^^^ not found in this scope
    |
help: consider importing one of these constants
    |
3   + use crate::simulations::forward::full_palette::PURPLE;
    |
3   + use plotters::prelude::full_palette::PURPLE;
    |

warning: unused import: `ndarray::Array1`
 --> src/models/neuron.rs:2:5
  |
2 | use ndarray::Array1;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

For more information about this error, try `rustc --explain E0425`.
warning: `fhn` (lib) generated 1 warning
error: could not compile `fhn` (lib) due to 1 previous error; 1 warning emitted
